--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1> welcome to my com science webpage </h1>
     <p> this is CS information </p>
     <a href="2.html"> go to detail information </a>
+
+    <p> Design by Mr. Nakarin Phichaichuang</p>
+    <h3> RMUTT University </h3>
 </body>
 </html>
